# llm_from_scratch

./: README.md
agents/ReACT/: .gitignore  config.yaml  pyproject.toml  requirements.txt  simple_ReACT.py  simple_ReACT_detail.py
agents/simple_agents/: pyproject.toml  simple_agents.ipynb
agents/supervisor_pattern/: .gitignore  agent.py  pyproject.toml  pyproject.txt  readme.md  test_api.py  tool_balance_sheets.py  tool_cash_flow_statements.py  tool_income_statement.py  tool_insider_trades.py  tool_options_chain.py  tool_stock_prices.py  utils.py
